View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0026210 | Open CASCADE | OCCT:Samples | public | 2015-05-12 13:16 | 2016-04-20 15:48 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.9.0 | ||||
Target Version | 7.0.0 | Fixed in Version | 7.0.0 | ||
Summary | 0026210: Sample Modeling: operation "Make revol" has text in window caption "Make a prism" | ||||
Description | In sample Modeling operation "Make revol" puts into windows caption text "Make a prism" | ||||
Steps To Reproduce | 1. Launch sample "Modeling" 2. Click icon "Revol" from toolbar 3. Check the captions of main window and window for clipboard operations. | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Alexey, please describe what sample it is about and how to reproduce the problem |
|
Modeling is standard OCCT MFC-based sample. Second name of sample is "Topology Transformations". |
|
Branch CR26210 has been created by ski. SHA-1: 0dcc632363f4aa3a7689a9860e671901535d191c Detailed log of new commits: Author: ski Date: Thu May 28 12:20:52 2015 +0300 0026210: Sample Modeling: operation "Make revol" has text in window caption "Make a prism" Titles for revol operation were updated. Wrongly merged mfcsample projects were corrected. |
|
Titles for revol operation were updated to "Make a revol". Also, wrongly merged mfcsample projects were corrected. Please, review. |
|
No remarks, please integrate (no testing is needed) |
|
Branch CR26210 has been deleted by inv. SHA-1: 0dcc632363f4aa3a7689a9860e671901535d191c |
occt: master 3f23e6ac 2015-05-28 09:20:52
Committer: bugmaster Details Diff |
0026210: Sample Modeling: operation "Make revol" has text in window caption "Make a prism" Titles for revol operation were updated. Wrongly merged mfcsample projects were corrected. |
Affected Issues 0026210 |
|
mod - samples/mfc/standard/02_Modeling/src/ModelingDoc.cpp | Diff File | ||
mod - samples/mfc/standard/mfcsample/adm/win/vc11/mfcsample.vcxproj | Diff File | ||
mod - samples/mfc/standard/mfcsample/adm/win/vc12/mfcsample.vcxproj | Diff File | ||
mod - samples/mfc/standard/mfcsample/adm/win/vc8/mfcsample.vcproj | Diff File | ||
mod - samples/mfc/standard/mfcsample/adm/win/vc9/mfcsample.vcproj | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-05-12 13:16 |
|
New Issue | |
2015-05-12 13:16 |
|
Assigned To | => bugmaster |
2015-05-12 13:39 |
|
Note Added: 0040823 | |
2015-05-12 13:50 |
|
Note Added: 0040824 | |
2015-05-12 13:52 |
|
Steps to Reproduce Updated | |
2015-05-12 13:52 |
|
Steps to Reproduce Updated | |
2015-05-27 16:45 | bugmaster | Assigned To | bugmaster => ski |
2015-05-28 12:05 |
|
Status | new => assigned |
2015-05-28 12:21 | git | Note Added: 0041644 | |
2015-05-28 12:27 |
|
Note Added: 0041645 | |
2015-05-28 12:27 |
|
Assigned To | ski => abv |
2015-05-28 12:27 |
|
Status | assigned => resolved |
2015-05-29 16:52 |
|
Note Added: 0041754 | |
2015-05-29 16:52 |
|
Assigned To | abv => bugmaster |
2015-05-29 16:52 |
|
Status | resolved => reviewed |
2015-06-01 16:53 | bugmaster | Test case number | => Not needed |
2015-06-01 16:53 | bugmaster | Status | reviewed => tested |
2015-06-05 15:00 | bugmaster | Changeset attached | => occt master 3f23e6ac |
2015-06-05 15:00 | bugmaster | Status | tested => verified |
2015-06-05 15:00 | bugmaster | Resolution | open => fixed |
2015-08-14 11:00 | git | Note Added: 0044256 | |
2016-04-20 15:44 |
|
Fixed in Version | => 7.0.0 |
2016-04-20 15:48 |
|
Status | verified => closed |