0026210: Sample Modeling: operation "Make revol" has text in window caption "Make a prism"

Titles for revol operation were updated.
Wrongly merged mfcsample projects were corrected.